--- a/ReplicatedDiscordToRobloxStattus/JSON/Settings.json
+++ b/ReplicatedDiscordToRobloxStattus/JSON/Settings.json
@@ -1,5 +1,4 @@
 {
-    "UserId" : "1420835915",
-    "ClientId" : "748037937001660477",
-    "Token" : "mfa.XWpIRdCFWD_DdPEdVFFIvlOZ9fGSM0rl-WHaqPg5ekytWmHFSc3QWakxl0q1K1eSug1ON-J3utouSmgzgHu-"
+    "UserId" : "ROBLOX USERID",
+    "Token" : "DISCORD ACCOUNT TOKEN"
 }
